2007-07-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed/updated the Python bindings
	* Fixed the gtk-doc API documentation genation process
	* Updated the online gtk-doc API documentation
	* Prepared a testing QEmu virtual machine
	* Marked the Kolumbus IMAP server as an idiot's IMAP server, as it
	doesn't correctly support UIDPLUS and BINARY

2007-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_connection_event), (tny_maemo_conic_device_connect):
	Removed debug output.

2007-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect): Use GDK_THREADS_ENTER/LEAVE as 
	used by gdk_dialog_run(), because a second g_main_loop_run() seems 
	to hang when gdk_threads_init() has been called before (by the app, 
	for instance). I don't like having these at this level, so we 
	should try to fix it properly later.

2007-06-29  Murray Cumming  <murrayc@murrayc.com>
	* libtinymail-maemo/tny-maemo-conic-device.c: 
	(on_connection_event), (tny_maemo_conic_device_connect):
	Use a second mainloop instead of iterating the main mainloop. This 
	seems more robust and is probably the recommended way to do it.
	There is lots of debug output here, which I will remove later after 
	further investigations.

2007-06-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in TnyCamelTransportAccount: rewrote the prepare method
	implementation
	* Bugfix in tny_camel_store_account_find_folder_default

2007-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_disconnect): Fix a warning about an 
	uninitialized variable. Nobody is using this function yet anyway.

2007-06-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various connectivity bugfixes
	* Fixed a locking problem when connectivity changes
	* Bugfix in poke-status
	* Crasher fixed (NULL function pointer)

2007-06-28  Philip Van Hoof  <pvanhoof@gnome.org>
